# qp

./: .gitignore  CMakeLists.txt
nl/: WB2.nl
src/: ConvexRelaxation.cpp  ConvexRelaxation.h  CsdpInterface.cpp  CsdpInterface.h  Formatter.cpp  Formatter.h  NlReader.cpp  NlReader.h  Problem.cpp  Problem.h  main.cpp
